--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="container mt-5 mb-5">
     <div *ngIf="cartService.cartItems().length > 0 else noItem" class="CartContainer mx-auto">
       <div class="Header">
         <h3 class="Heading">Shopping Cart</h3>
@@ -44,4 +44,7 @@
   </ng-template>
   
   </div><br><br><br>
-  
+  <div class="container">
+
+  </div>
+<h1></h1>
