--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -127,6 +127,72 @@ style="background: url('/images/banner.jpeg')
   </div>
 </div>
 
+<div class="container-fluid mt-4" style="background-color: blueviolet;height: 300px;">
+  <div class="d-flex justify-content-center" style="margin:10px;color:rgb(98, 18, 173)"><p style="color: red;margin-top: 20px;">What Do You Looking For</p></div>
+  
+  <div class="scrolling-wrapper row  row-cols-2 row-cols-sm-2 row-cols-md-4 g-3  flex-row flex-nowrap  pb-2 pt-2">
+  
+        <div class="col-lg-2 text-center"  >
+          <img src="images/MilkAgHY6.jpeg" class="w3-circle" alt="Car" style="width:200px">
+          <label>Milk Products</label>
+        </div>
+  
+        <div class="col-lg-2 text-center"  >
+          <img src="images/depositphochomemade-salad.jpeg" class="w3-circle" alt="Car" style="width:200px">
+          <label>Sweets</label>
+        </div>
+
+        <div class="col-lg-2 text-center"  >
+          <img src="images/depositphochomemade-salad.jpeg" class="w3-circle" alt="Car" style="width:200px">
+          <label>Spices</label>
+        </div>
+
+        <div class="col-lg-2 text-center"  >
+          <img src="images/depositphochomemade-salad.jpeg" class="w3-circle" alt="Car" style="width:200px">
+          <label>Pickels & Chateneys</label>
+        </div>
+
+        <div class="col-lg-2 text-center"  >
+          <img src="images/depositphochomemade-salad.jpeg" class="w3-circle" alt="Car" style="width:200px">
+          <label>Fasting Foods</label>
+        </div>
+
+        <div class="col-lg-2 text-center"  >
+          <img src="images/depositphochomemade-salad.jpeg" class="w3-circle" alt="Car" style="width:200px">
+          <label>Namkeens</label>
+        </div>
+
+        <div class="col-lg-2 text-center"  >
+          <img src="images/depositphochomemade-salad.jpeg" class="w3-circle" alt="Car" style="width:200px">
+          <label>Staples</label>
+        </div>
+    </div>
+</div>
+
+<div class="container-fluid">
+  <div class="d-flex justify-content-center" style="margin:10px;"><h1>Rentals</h1></div>
+  <div class="row">
+    <div class="col-lg-6 col-md-6 col-12">
+      <div class="card  text-white " >
+        <img src="images/waldemar-5hDqrxz5Rpc-unsplash.jpeg" class="card-img-top img-fluid" alt="...">
+        <div class="card-img-overlay" >
+         
+         
+         
+        </div>
+      </div>
+    </div>
+    <div class="col-lg-6 col-md-6 col-12">
+      <div class="card  text-white " >
+        <img src="images/realistic-gold-silver-jewelry-display-black-mannequins-stands-grey-surface/9644.jpg" class="card-img-top card-img" alt="...">
+        <div class="card-img-overlay">
+         
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 
 
   <div class="container-fluid">
@@ -154,4 +220,10 @@ style="background: url('/images/banner.jpeg')
 
 
       </div>
+</div>
+
+<div class="container-fluid" class="d-flex justify-content-center align-items-center"
+style="background: url('/images/delicious-indian-restaurant-food-youtube-cover/7682746.jpg')
+    no-repeat center;background-size: cover;height: 720px;">
+ 
 </div>
