--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid" class="d-flex justify-content-center align-items-center"
+<!-- <div class="container-fluid" class="d-flex justify-content-center align-items-center"
 style="background: url('/images/banner.jpeg')
     no-repeat center;background-size: cover;height: 530px;">
   <div class="d-flex flex-column justify-content-center align-items-center">
@@ -6,10 +6,20 @@ style="background: url('/images/banner.jpeg')
       <h1 >FRESH FOODS</h1>
       <button type="button" class="btn btn-outline-danger btn-lg">VIEW PRODUCTS</button>
 
-
-    <!-- <h4 routerLink="/" class="cursor-pointer pt-2" style="color: #69a1bb">Home | Careers</h4> -->
   </div>
+</div> -->
+<div class="banner-container">
+  <div class="bg-image">
+    <div class="centered">
+ 
+      <p>FRESH FOODS</p>
+      <button type="button" class="btn btn-outline-danger btn-sm">VIEW PRODUCTS</button>
+
+  </div>
+  </div>
+
 </div>
+
 
 <div class="container-fluid ">
   <div class="slider">
@@ -90,7 +100,7 @@ style="background: url('/images/banner.jpeg')
         </div>
       </div>
     </div>
-    <div class="col-lg-6 col-md-6 col-12">
+    <div class="col-lg-6 col-md-6 col-12 mt-2 mt-lg-0 mt-md-0">
       <div class="card  text-white " >
         <img src="images/pexels-suzyhazelwood-1266139.jpeg" class="card-img-top card-img" alt="...">
         <div class="card-img-overlay">
@@ -182,7 +192,7 @@ style="background: url('/images/banner.jpeg')
         </div>
       </div>
     </div>
-    <div class="col-lg-6 col-md-6 col-12">
+    <div class="col-lg-6 col-md-6 col-12 mt-2 mt-lg-0 mt-md-0">
       <div class="card  text-white " >
         <img src="images/realistic-gold-silver-jewelry-display-black-mannequins-stands-grey-surface/9644.jpg" class="card-img-top card-img" alt="...">
         <div class="card-img-overlay">
