--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -213,10 +213,10 @@ style="background: url('/images/banner.jpeg')
           <div class="col-lg-3"  *ngFor="let row of api.products()">
             <div class="card shadow-sm h-100">
               <img [src]="row.image" width="100%" height="225" alt="" style="padding: 10px;">
-              <div class="card-body">
+              <div class="card-body d-flex flex-column" >
                 <p class="card-title">{{row.title}}</p>
                 <p class="card-text">{{row.description}}</p>
-                <div class="d-flex justify-content-between align-items-center mt-3">
+                <div class="d-flex justify-content-between align-items-center mt-auto">
                   <div class="btn-group">
                    <button (click)="addToCart(row)" class="btn btn-success">Add To Cart</button>
                   </div>
