categorie layout change

--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -83,11 +83,11 @@ style="background: url('/images/banner.jpeg')
     
 </div><br><br>
 
-
-<div class="container">
-  <div class="d-flex justify-content-center" style="margin:10px;"><h1>Shop By Categories</h1></div>
+<div class="text-center" style="margin:10px;"><h1>Shop By Categories</h1></div>
+<div class="container"  >
+  <div class="d-flex justify-content-center align-items-center">
   <div class="row">
-    <div class="col-lg-6 col-md-6 col-12">
+    <div class="col-lg-8 col-md-6 col-12">
       <div class="card  text-white " >
         <img src="images/depositphochomemade-salad.jpeg" class="card-img-top img-fluid" alt="...">
         <div class="card-img-overlay" >
@@ -100,7 +100,7 @@ style="background: url('/images/banner.jpeg')
         </div>
       </div>
     </div>
-    <div class="col-lg-6 col-md-6 col-12 mt-2 mt-lg-0 mt-md-0">
+    <div class="col-lg-4 col-md-6 col-12 mt-2 mt-lg-0 mt-md-0">
       <div class="card  text-white " >
         <img src="images/pexels-suzyhazelwood-1266139.jpeg" class="card-img-top card-img" alt="...">
         <div class="card-img-overlay">
@@ -112,7 +112,7 @@ style="background: url('/images/banner.jpeg')
       </div>
     </div>
     <div class="w-100"></div>
-    <div class="col-lg-6 col-md-6 col-12">
+    <div class="col-lg-4 col-md-6 col-12">
       <div class="card text-white mt-2" >
         <img src="images/pngtreeaffee-table-png-image_1657780.jpeg" class="card-img-top card-img" alt="...">
         <div class="card-img-overlay">
@@ -123,7 +123,7 @@ style="background: url('/images/banner.jpeg')
         </div>
       </div>
     </div>
-    <div class="col-lg-6 col-md-6 col-12">
+    <div class="col-lg-8 col-md-6 col-12">
       <div class="card  text-white mt-2" >
         <img src="images/istockphoto-698724258-612x612.jpeg" class="card-img-top card-img" alt="...">
         <div class="card-img-overlay">
@@ -134,6 +134,7 @@ style="background: url('/images/banner.jpeg')
         </div>
       </div>
     </div>
+  </div>
   </div>
 </div>
 
@@ -232,8 +233,15 @@ style="background: url('/images/banner.jpeg')
       </div>
 </div>
 
-<div class="container-fluid" class="d-flex justify-content-center align-items-center"
+<!-- <div class="container-fluid" class="d-flex justify-content-center align-items-center"
 style="background: url('/images/delicious-indian-restaurant-food-youtube-cover/7682746.jpg')
     no-repeat center;background-size: cover;height: 720px;">
  
+</div> -->
+
+<div class="banner-container">
+  <div class="footer-img">
+  
+  </div>
+
 </div>
