--- a/src/app/pages/homepage/homepage.component.scss
+++ b/src/app/pages/homepage/homepage.component.scss
@@ -21,6 +21,24 @@
   color: red;
 }
 
+.footer-img{
+  width:100%;
+  height: 300px;
+  padding-top:42%;
+  background: url('/images/delicious-indian-restaurant-food-youtube-cover/7682746.jpg') no-repeat center;
+  background-size: cover;
+}
+
+@media (min-width:992px){
+  .footer-img{
+    width:100%;
+    height: 720px;
+    padding-top:42%;
+    background: url('/images/delicious-indian-restaurant-food-youtube-cover/7682746.jpg') no-repeat center;
+    background-size: cover;
+  }
+}
+
 img{
     object-fit: contain;
     padding: 10px;
