--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -84,12 +84,12 @@ style="background: url('/images/banner.jpeg')
 </div><br><br>
 
 <div class="text-center" style="margin:10px;"><h1>Shop By Categories</h1></div>
-<div class="container"  >
-  <div class="d-flex justify-content-center align-items-center">
-  <div class="row">
-    <div class="col-lg-8 col-md-6 col-12">
-      <div class="card  text-white " >
-        <img src="images/depositphochomemade-salad.jpeg" class="card-img-top img-fluid" alt="...">
+<div class="container "   >
+  <div class="">
+  <div class="row gx-3 d-flex justify-content-center align-items-center">
+    <div class="col-lg-6 col-md-6 col-12 ">
+      <div class="card  text-white card-border"  >
+        <img src="images/depositphochomemade-salad.jpeg" class="card-img-top img-fluid" alt="..." style="border-radius: 25px;">
         <div class="card-img-overlay" >
           <div class="center">
             <p>Homemade Food Products</p>
@@ -101,8 +101,8 @@ style="background: url('/images/banner.jpeg')
       </div>
     </div>
     <div class="col-lg-4 col-md-6 col-12 mt-2 mt-lg-0 mt-md-0">
-      <div class="card  text-white " >
-        <img src="images/pexels-suzyhazelwood-1266139.jpeg" class="card-img-top card-img" alt="...">
+      <div class="card  text-white card-border" >
+        <img src="images/pexels-suzyhazelwood-1266139.jpeg" class="card-img-top card-img" alt="..." style="border-radius: 25px;">
         <div class="card-img-overlay">
           <div class="center">
             <p>Sewing Cloths Are Available</p>
@@ -113,8 +113,8 @@ style="background: url('/images/banner.jpeg')
     </div>
     <div class="w-100"></div>
     <div class="col-lg-4 col-md-6 col-12">
-      <div class="card text-white mt-2" >
-        <img src="images/pngtreeaffee-table-png-image_1657780.jpeg" class="card-img-top card-img" alt="...">
+      <div class="card text-white mt-2 card-border" >
+        <img src="images/pngtreeaffee-table-png-image_1657780.jpeg" class="card-img-top card-img" alt="..." style="border-radius: 25px;">
         <div class="card-img-overlay">
           <div class="center">
             <p>Homemade Decor Products Available</p>
@@ -123,9 +123,9 @@ style="background: url('/images/banner.jpeg')
         </div>
       </div>
     </div>
-    <div class="col-lg-8 col-md-6 col-12">
-      <div class="card  text-white mt-2" >
-        <img src="images/istockphoto-698724258-612x612.jpeg" class="card-img-top card-img" alt="...">
+    <div class="col-lg-6 col-md-6 col-12">
+      <div class="card  text-white mt-2 card-border" >
+        <img src="images/istockphoto-698724258-612x612.jpeg" class="card-img-top card-img" alt="..." style="border-radius: 25px;">
         <div class="card-img-overlay">
           <div class="center">
             <p>Festival Cloths Are Available Rent</p>
@@ -144,37 +144,37 @@ style="background: url('/images/banner.jpeg')
   <div class="scrolling-wrapper row  row-cols-2 row-cols-sm-2 row-cols-md-4 g-3  flex-row flex-nowrap  pb-2 pt-2">
   
         <div class="col-lg-2 text-center"  >
-          <img src="images/MilkAgHY6.jpeg" class="w3-circle" alt="Car" style="width:200px">
+          <img src="images/MilkAgHY6.jpeg" class="w3-circle" alt="Car" style="width:190px">
           <label>Milk Products</label>
         </div>
   
         <div class="col-lg-2 text-center"  >
-          <img src="images/depositphochomemade-salad.jpeg" class="w3-circle" alt="Car" style="width:200px">
+          <img src="images/depositphochomemade-salad.jpeg" class="w3-circle" alt="Car" style="width:190px">
           <label>Sweets</label>
         </div>
 
         <div class="col-lg-2 text-center"  >
-          <img src="images/depositphochomemade-salad.jpeg" class="w3-circle" alt="Car" style="width:200px">
+          <img src="images/depositphochomemade-salad.jpeg" class="w3-circle" alt="Car" style="width:190px">
           <label>Spices</label>
         </div>
 
         <div class="col-lg-2 text-center"  >
-          <img src="images/depositphochomemade-salad.jpeg" class="w3-circle" alt="Car" style="width:200px">
+          <img src="images/depositphochomemade-salad.jpeg" class="w3-circle" alt="Car" style="width:190px">
           <label>Pickels & Chateneys</label>
         </div>
 
         <div class="col-lg-2 text-center"  >
-          <img src="images/depositphochomemade-salad.jpeg" class="w3-circle" alt="Car" style="width:200px">
+          <img src="images/depositphochomemade-salad.jpeg" class="w3-circle" alt="Car" style="width:190px">
           <label>Fasting Foods</label>
         </div>
 
         <div class="col-lg-2 text-center"  >
-          <img src="images/depositphochomemade-salad.jpeg" class="w3-circle" alt="Car" style="width:200px">
+          <img src="images/depositphochomemade-salad.jpeg" class="w3-circle" alt="Car" style="width:190px">
           <label>Namkeens</label>
         </div>
 
         <div class="col-lg-2 text-center"  >
-          <img src="images/depositphochomemade-salad.jpeg" class="w3-circle" alt="Car" style="width:200px">
+          <img src="images/depositphochomemade-salad.jpeg" class="w3-circle" alt="Car" style="width:190px">
           <label>Staples</label>
         </div>
     </div>
@@ -184,7 +184,7 @@ style="background: url('/images/banner.jpeg')
   <div class="d-flex justify-content-center" style="margin:10px;"><h1>Rentals</h1></div>
   <div class="row">
     <div class="col-lg-6 col-md-6 col-12">
-      <div class="card  text-white " >
+      <div class="card  text-white card-border" >
         <img src="images/waldemar-5hDqrxz5Rpc-unsplash.jpeg" class="card-img-top img-fluid" alt="...">
         <div class="card-img-overlay" >
          
@@ -194,7 +194,7 @@ style="background: url('/images/banner.jpeg')
       </div>
     </div>
     <div class="col-lg-6 col-md-6 col-12 mt-2 mt-lg-0 mt-md-0">
-      <div class="card  text-white " >
+      <div class="card  text-white card-border" >
         <img src="images/realistic-gold-silver-jewelry-display-black-mannequins-stands-grey-surface/9644.jpg" class="card-img-top card-img" alt="...">
         <div class="card-img-overlay">
          
@@ -239,7 +239,7 @@ style="background: url('/images/delicious-indian-restaurant-food-youtube-cover/7
  
 </div> -->
 
-<div class="banner-container">
+<div class="banner-container mt-2">
   <div class="footer-img">
   
   </div>
