--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -143,39 +143,39 @@ style="background: url('/images/banner.jpeg')
   
   <div class="scrolling-wrapper row  row-cols-2 row-cols-sm-2 row-cols-md-4 g-3  flex-row flex-nowrap  pb-2 pt-2">
   
-        <div class="col-lg-2 text-center"  >
+        <div class="col-lg-2 col-sm-4 col-6 text-center"  >
           <img src="images/MilkAgHY6.jpeg" class="w3-circle" alt="Car" style="width:190px">
-          <label>Milk Products</label>
+          <h6>Milk Products</h6>
         </div>
   
-        <div class="col-lg-2 text-center"  >
-          <img src="images/depositphochomemade-salad.jpeg" class="w3-circle" alt="Car" style="width:190px">
-          <label>Sweets</label>
+        <div class="col-lg-2 col-sm-4 col-6 text-center"  >
+          <img src="images/depositphochomemade-salad.jpeg" class="w3-circle" alt="Car" style="width:190px"><br>
+          <h6>Sweets </h6>
         </div>
 
-        <div class="col-lg-2 text-center"  >
+        <div class="col-lg-2 col-sm-4 text-center"  >
           <img src="images/depositphochomemade-salad.jpeg" class="w3-circle" alt="Car" style="width:190px">
-          <label>Spices</label>
+          <h6>Spices</h6>
         </div>
 
-        <div class="col-lg-2 text-center"  >
+        <div class="col-lg-2 col-sm-4 text-center"  >
           <img src="images/depositphochomemade-salad.jpeg" class="w3-circle" alt="Car" style="width:190px">
-          <label>Pickels & Chateneys</label>
+          <h6>Pickels & Chateneys</h6>
         </div>
 
-        <div class="col-lg-2 text-center"  >
+        <div class="col-lg-2 col-sm-4 text-center"  >
           <img src="images/depositphochomemade-salad.jpeg" class="w3-circle" alt="Car" style="width:190px">
-          <label>Fasting Foods</label>
+          <h6>Fasting Foods</h6>
         </div>
 
-        <div class="col-lg-2 text-center"  >
+        <div class="col-lg-2 col-sm-4 text-center"  >
           <img src="images/depositphochomemade-salad.jpeg" class="w3-circle" alt="Car" style="width:190px">
-          <label>Namkeens</label>
+          <h6>Namkeens</h6>
         </div>
 
-        <div class="col-lg-2 text-center"  >
+        <div class="col-lg-2 col-sm-4 text-center"  >
           <img src="images/depositphochomemade-salad.jpeg" class="w3-circle" alt="Car" style="width:190px">
-          <label>Staples</label>
+          <h6>Staples</h6>
         </div>
     </div>
 </div>
@@ -184,7 +184,7 @@ style="background: url('/images/banner.jpeg')
   <div class="d-flex justify-content-center" style="margin:10px;"><h1>Rentals</h1></div>
   <div class="row">
     <div class="col-lg-6 col-md-6 col-12">
-      <div class="card  text-white card-border" >
+      <div class="card  text-white card-border" class="min-height">
         <img src="images/waldemar-5hDqrxz5Rpc-unsplash.jpeg" class="card-img-top img-fluid" alt="...">
         <div class="card-img-overlay" >
          
