--- a/src/app/pages/homepage/homepage.component.scss
+++ b/src/app/pages/homepage/homepage.component.scss
@@ -76,7 +76,7 @@ img{
     color:red;
 }
 
-label{
+h6{
   color: white;
 }
 
@@ -185,6 +185,14 @@ p{
 
   .bg-image{
     height: 200px;
+  }
+}
+
+@media (min-width:576px) and (max-width:778px){
+  .card-img-top {
+    width: 100%;
+    height: 40vw;
+    object-fit: cover;
   }
 }
 
