min-height class remove

--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -39,7 +39,7 @@
         <span class="navbar-toggler-icon" ></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
+        <ul class="navbar-nav me-auto mb-2 ">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#" style="font-size: 20px;">Home</a>
           </li>
@@ -104,7 +104,7 @@
                 <label>&nbsp;&nbsp;Profile&nbsp;&nbsp;</label>
                </div>
                <div class="col mt-lg-1">
-                <button  type="button" class="btn btn-danger btn-lg">Login</button>
+                <button routerLink="/cart" type="button" class="btn btn-danger btn-lg">Login</button>
                </div>
             </div>
            
@@ -117,3 +117,4 @@
     </div>
   </nav>
 
+ 
