--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -13,7 +13,7 @@ style="background: url('/images/banner.jpeg')
     <div class="centered">
  
       <p>FRESH FOODS</p>
-      <button type="button" class="btn btn-outline-danger btn-sm">VIEW PRODUCTS</button>
+      <button type="button" routerLink="cart" class="btn btn-outline-danger btn-sm">VIEW PRODUCTS</button>
 
   </div>
   </div>
@@ -184,7 +184,7 @@ style="background: url('/images/banner.jpeg')
   <div class="d-flex justify-content-center" style="margin:10px;"><h1>Rentals</h1></div>
   <div class="row">
     <div class="col-lg-6 col-md-6 col-12">
-      <div class="card  text-white card-border" class="min-height">
+      <div class="card  text-white card-border" >
         <img src="images/waldemar-5hDqrxz5Rpc-unsplash.jpeg" class="card-img-top img-fluid" alt="...">
         <div class="card-img-overlay" >
          
